--- a/src/scss/pages/catalog/_stats.scss
+++ b/src/scss/pages/catalog/_stats.scss
@@ -1,10 +1,10 @@
 .stats {
-    background: url('../../../img/backgrounds/statictics-background.png') center / cover no-repeat;
+    background: url('../img/backgrounds/statictics-background.png') center / cover no-repeat;
     min-height: 56rem;
     padding: 7.1rem 0 4rem 0;
 
     &-dark {
-        background: url('../../../img/backgrounds/statictics-background-dark.jpg') center / cover no-repeat;
+        background: url('../img/backgrounds/statictics-background-dark.jpg') center / cover no-repeat;
 
     }
 
