--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,15 +1,17 @@
-@import "./base/base.scss";
-@import "./base/utilities.scss";
-@import "./base/typography.scss";
-@import "./components/themeSwitcher.scss";
-@import "./components/button.scss";
-@import "./components/header.scss";
-@import "./components/hero.scss";
-@import "./components/footer.scss";
-@import "./pages/about/about.scss";
-@import "./pages/about/help.scss";
-@import "./pages/about/services.scss";
-@import "./pages/about/reviews.scss";
-@import "./pages/catalog/catalog.scss";
-@import "./pages/catalog/stats.scss";
-@import './pages/contact/contacts.scss';
+@use "base/base.scss";
+@use "base/utilities.scss";
+@use "base/typography.scss";
+@use "components/themeSwitcher.scss";
+@use "components/modal.scss";
+@use "components/button.scss";
+@use "components/header.scss";
+@use "components/hero.scss";
+@use "components/footer.scss";
+@use "pages/about/about.scss";
+@use "pages/about/help.scss";
+@use "pages/about/services.scss";
+@use "pages/about/reviews.scss";
+@use "pages/catalog/catalog.scss";
+@use "pages/catalog/stats.scss";
+@use 'pages/contact/contacts.scss';
+@use 'pages/contact/form.scss';
