--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -1,13 +1,15 @@
+@use "base/base.scss";
+
 .hero {
     width: 100%;
     min-height: 60rem;
     background: url('../img/backgrounds/main-section-light.jpg') center center / cover no-repeat;
 
-    @include respond(tab-port) {
+    @include base.respond(tab-port) {
         min-height: 70rem;
     }
 
-    @include respond(big-phone) {
+    @include base.respond(big-phone) {
         min-height: 80vh;
     }
 
@@ -22,7 +24,7 @@
         padding-top: 17rem;
         padding-left: 13rem;
 
-        @include respond(big-phone) {
+        @include base.respond(big-phone) {
             padding-left: 6rem;
             padding-right: 6rem;
         }
@@ -31,7 +33,7 @@
     &__text {
         width: 65%;
 
-        @include respond(big-phone) {
+        @include base.respond(big-phone) {
             width: 100%;
         }
 
@@ -41,7 +43,7 @@
             color: var(--text-color-white);
             font-weight: 300;
 
-            @include respond(big-phone) {
+            @include base.respond(big-phone) {
                 text-align: center;
             }
         }
@@ -53,7 +55,7 @@
             letter-spacing: 1.2px;
             margin-bottom: 3rem;
 
-            @include respond(big-phone) {
+            @include base.respond(big-phone) {
                 text-align: center;
             }
         }
