--- a/src/scss/pages/about/_about.scss
+++ b/src/scss/pages/about/_about.scss
@@ -1,20 +1,22 @@
+@use "base/base.scss";
+
 .about {
-    background: url('../../../img/backgrounds/about.jpg') no-repeat center / cover;
+    background: url('../img/backgrounds/about.jpg') no-repeat center / cover;
     min-height: 70rem;
     width: 100%;
     padding-top: 3.4rem;
 
-    @include respond(tab-land) {
+    @include base.respond(tab-land) {
         padding: 3rem 3rem
     }
 
-    @include respond(big-phone) {
+    @include base.respond(big-phone) {
         padding: 7rem 1rem;
         min-height: 100vh;
     }
 
     &-dark {
-        background: url('../../../img/backgrounds/about-dark.jpg') no-repeat center / cover;
+        background: url('../img/backgrounds/about-dark.jpg') no-repeat center / cover;
     }
 
     .container {
@@ -23,7 +25,7 @@
         padding: 3.3rem 5rem 8rem 5rem;
         display: flex;
 
-        @include respond(tab-port) {
+        @include base.respond(tab-port) {
             flex-direction: column-reverse;
             align-items: center;
             padding: 3.3rem 2rem 8rem 2rem;
@@ -40,7 +42,7 @@
         padding-top: 4rem;
         padding-right: 2rem;
 
-        @include respond(tab-port) {
+        @include base.respond(tab-port) {
             width: 80%;
             height: auto;
             text-align: center;
@@ -48,7 +50,7 @@
             margin-top: 3rem;
         }
 
-        @include respond(big-phone) {
+        @include base.respond(big-phone) {
             width: 100%;
         }
 
@@ -57,7 +59,7 @@
             font-weight: 500;
 
 
-            @include respond(big-phone) {
+            @include base.respond(big-phone) {
                 font-size: 3rem;
             }
         }
@@ -67,7 +69,7 @@
             font-weight: 400;
 
 
-            @include respond(big-phone) {
+            @include base.respond(big-phone) {
                 font-size: 2.5rem;
                 margin-bottom: 2rem;
             }
@@ -79,7 +81,7 @@
         height: 50rem;
         position: relative;
 
-        @include respond(tab-port) {
+        @include base.respond(tab-port) {
             width: 100%;
             height: auto;
             display: flex;
@@ -97,12 +99,12 @@
             left: 0;
 
 
-            @include respond(tab-port) {
+            @include base.respond(tab-port) {
                 position: relative;
                 height: auto;
             }
 
-            @include respond(big-phone) {
+            @include base.respond(big-phone) {
                 width: 36rem;
             }
 
@@ -117,13 +119,13 @@
             right: 0;
             z-index: 1;
 
-            @include respond(tab-port) {
+            @include base.respond(tab-port) {
                 position: relative;
                 // width: 36rem;
                 height: auto;
             }
 
-            @include respond(big-phone) {
+            @include base.respond(big-phone) {
                 display: none;
             }
         }
