--- a/src/scss/pages/contact/_contacts.scss
+++ b/src/scss/pages/contact/_contacts.scss
@@ -1,10 +1,90 @@
+@use "base/base.scss";
+
 .contacts {
     padding: 6rem 0 6rem 0;
     background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='40' height='30' patternTransform='scale(7) rotate(35)'><rect x='0' y='0' width='100%' height='100%' fill='%23ffffffff'/><path d='M0 22.5h30v15H0zm15-15h30v15H15m-30-15h30v15h-30zm15-15h30v15H0z' transform='translate(5,0)' stroke-width='0.5' stroke='%23dadadaff' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(-140,-147)' fill='url(%23a)'/></svg>");
     background-size: cover;
     background-position: center;
 
+    @include base.respond(tab-land) {
+        padding: 6rem 2rem 6rem 2rem;
+    }
+
     &-dark {
         background-image: url("data:image/svg+xml,<svg id='patternId' width='100%' height='100%' xmlns='http://www.w3.org/2000/svg'><defs><pattern id='a' patternUnits='userSpaceOnUse' width='40' height='30' patternTransform='scale(7) rotate(35)'><rect x='0' y='0' width='100%' height='100%' fill='%23121212ff'/><path d='M0 22.5h30v15H0zm15-15h30v15H15m-30-15h30v15h-30zm15-15h30v15H0z' transform='translate(5,0)' stroke-width='0.5' stroke='%23424242ff' fill='none'/></pattern></defs><rect width='800%' height='800%' transform='translate(-140,-392)' fill='url(%23a)'/></svg>");
     }
+
+    .container {
+        margin-top: 3.4rem;
+        display: flex;
+        gap: 6rem;
+        justify-content: center;
+        align-items: center;
+
+        @include base.respond(tab-port) {
+            flex-direction: column;
+        }
+
+        iframe {
+            border-radius: 30px;
+            box-shadow: 0 4px 4px var(--box-shadow);
+
+            @include base.respond(tab-port) {
+                width: 500px;
+            }
+
+            @include base.respond(big-phone) {
+                width: 400px;
+                height: 400px;
+            }
+
+            @include base.respond(phone) {
+                width: 305px;
+            }
+        }
+    }
+
+    &__dialog {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        background-color: var(--card-color);
+        color: #333;
+        gap: 2.5rem;
+        padding: 9rem 3rem;
+        border-radius: 25px;
+        max-width: 50rem;
+        height: 40rem;
+        box-shadow: 0 4px 4px var(--box-shadow);
+        z-index: 3;
+
+        @include base.respond(tab-port) {
+            margin-bottom: -5rem;
+        }
+
+        @include base.respond(big-phone) {
+            margin-bottom: -5rem;
+        }
+
+        &_item {
+            display: flex;
+            align-items: center;
+
+            a {
+                margin-left: 10px;
+                color: var(--text-color);
+                text-decoration: none;
+                font-size: 2rem;
+            }
+
+            p {
+                margin-left: 10px;
+                color: var(--text-color);
+                font-size: 2rem;
+            }
+        }
+
+    }
+
+
 }
