--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -320,7 +320,7 @@
     }
 
     .arrow-up {
-        background: #fff;
+        background: var(--card-color);
         width: 40px;
         height: 40px;
         border-radius: 100%;
