add profile page

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -10,6 +10,7 @@
     --background-color: #fff;
     --service-icon-inner: #fff;
     --box-shadow: rgba(0, 0, 0, .2);
+    --profile-color: #d9d9d9;
 }
 
 [data-theme="dark"] {
@@ -21,6 +22,8 @@
     --background-color: #121212;
     --service-icon-inner: #686868;
     --box-shadow: rgba(209, 209, 209, .25);
+    --profile-color: #686868;
+
 
 }
 
