--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,3 +15,4 @@
 @use "pages/catalog/stats.scss";
 @use 'pages/contact/contacts.scss';
 @use 'pages/contact/form.scss';
+@use 'pages/profile/profile.scss';
