--- a/src/scss/components/_themeSwitcher.scss
+++ b/src/scss/components/_themeSwitcher.scss
@@ -20,7 +20,7 @@
     }
 }
 
-.theme-switch-wrapper span {
+.theme-switch-wrapper span:first-child {
     margin-right: 10px;
     font-size: 1.5rem;
 }
