--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -10,14 +10,14 @@
     font-weight: 600;
     font-size: 1.7rem;
     transition: all .3s;
+    text-decoration: none;
+    color: black;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-    a {
-        text-decoration: none;
+    &:visited {
         color: black;
-
-        &:visited {
-            color: black;
-        }
     }
 
     @include base.respond(tab-land) {
@@ -40,7 +40,7 @@
 
     &-center-tablet {
         @include base.respond(tab-port) {
-            display: block;
+            display: flex;
             margin: 0 auto;
             width: 40rem;
             height: 10rem;
@@ -50,7 +50,7 @@
 
     &-center-phone {
         @include base.respond(big-phone) {
-            display: block;
+            display: flex;
             margin: 0 auto;
             width: 40rem;
             height: 10rem;
