--- a/src/scss/components/_modal.scss
+++ b/src/scss/components/_modal.scss
@@ -87,6 +87,9 @@
     display: none;
 }
 
+#register-link {
+    color: var(--text-color)
+}
 
 /* Модальное окно */
 .modal-catalog {
@@ -197,7 +200,7 @@
         }
     }
 
-    button {
+    a {
         margin-top: 10rem;
         width: 30rem;
         height: 5rem;
